<resources>
    <string name="app_name">MyCampus</string>
    <string name="communicate">Communicate</string>
    <string name="photos">Photos</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="mycampus">MyCampus</string>
    <string name="todo">TODO</string>
    <string name="mission">Your campus companion</string>
    <string name="photos_activity">Photos Activity</string>
    <string name="account_activity">account activity</string>
    <string name="messages_activity">Messages Activity</string>
    <string name="dash">dashboard</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="settings">Settings</string>
    <string name="actionsettings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="communication">communicate</string>
    <string name="contents">Content</string>
</resources>